# Qydrel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/: PROFILING.md  REPORT.md  architecture.md  correctness-lab.md  demo-script.md  evidence-report.md  grammar.md  reconstruction.md  runtime.md  spec.md  system-artifact.md
examples/: arrays.lang  bench.lang  errors.lang  fibonacci.lang  gc_collect.lang  gc_test.lang  hello.lang
src/: alloc.rs  arena_ast.rs  ast.rs  audit.rs  compare.rs  compiler.rs  fuzz.rs  gc.rs  gc_vm.rs  jit.rs  lexer.rs  lib.rs  limits.rs  main.rs  optimizer.rs  parser.rs  repl.rs  runtime.rs  sema.rs  token.rs  trace.rs  verifier.rs  vm.rs
tests/: gc_vm_tests.rs  integration_tests.rs  semantic_tests.rs
